ControllerTests opgeschoond: overbodige roles bij @WithMockUser, ongebruikte imports